lab1/Test/L1-A-11-51.cmm
int aDv ( ) {
  struct {
    float fww0Lzr0pAA4PiJJozj ;
  }IR ;
  if ( XsP3DGSwzGuo )   if ( jQ1 )   EwJu9 ;
else   while ( hr9nPRvag ) {
    int f6Td8Lxl6yo52HKUoI if , XfRVdoJa0_Oclr0IdPq 
      [ 1901086680 ] = H9PrNmyQ0wWZVI4k5nGC ;
  }

else   if ( hlbz3V )   return UEX || AM7MPN_ && TvLs_HYWoP 
    < aqvdAOKUcA + DbO38m * - nt ( Dugo3iWpqlsZBuugU11 
    = KbhdrBrxP13r_U = == PvkIZ6x7MpLW / ! - - ( KlmPWEoHIGpYenZOc1x 
    || rLnQVEdZoXr > - zPtIPoY9HIq [ q7eKo && Px5WK1iLcY 
    != ! TQaamthIE ( R56ll3Ksk , gKmkLkmqZZ ) . Rh6u >= 
    298465356.626220103 . foXC9rVT_IEtY11u3D2 ] [ zbpbqFs91bVK4GUM 
    . RWYT5XmUUhcu05 <= ! 37973665 ] . g5MiKmbSh - fI3uMI9mN0iEzH 
    ( ) ) ) ;


}
struct tqBprCQmH UvXX44 
;
int ;
int ;
int ;
int AF0nz8k5 ( int nhNY9t0BLDPY , int IU8i3cnhyXfbnv5 
  ) {
i }
struct eZnjbbD {
  struct eQyI0OxI54wlh5k UiIVM ;
;}l5 ( int nYHfuHqnX6XyvwMXfZo ) {
}
int xnmO2lmoFs9uOfLw81ak 869872395 , n0bYFAc 

;
864763668.14746630 